dfir_rs/tests/compile-fail/nightly/surface_negative_loop.stderr
error: Cyclical dataflow within a tick is not supported. Use `defer_tick()` or `defer_tick_lazy()` to break the cycle across ticks.
 --> tests/compile-fail/surface_negative_loop.rs:6:9
  |
6 |         source_iter([1]) -> [pos]diff;
  |         ^^^^^^^^^^^^^^^^
